**************
RECENT CHANGES
**************

======
1.84.0
======

* #261 Compatibility with environments that disable exec()
* #264 Grammar correction and send warning to stderr (by Melvyn Sopacua)
* #265 Features/install cmd fail invalid db config (by AydinHassan)
* New commands cache:report and cache:view to look inside the core cache
* Updated Symfony to 2.4

======
1.83.0
======

* Added --skip-config option to prohibit loading of external config files.
* #251 Improve db:info with prefix and machine-readable output (by Melvyn Sopacua)
* #255 ConfigurationLoader::loadPluginConfig() Bug? (Thanks to Cyrill Schumacher)
* #257 Configuration value decryption fails when using Enterprise Edition (by @aedmonds)
* #196 New table group for db:dump: --strip="@search" (by mystix)
* #124 Feature Request: dev:log:size should support "human readable" flags. (by Alan Storm)
* Updated dependencies (PHPUnit, Composer, Twig, JUnit-XML)

======
1.82.0
======

* Moved sys:check command logic into dist config
* Changed Magento detection (for future Magento 2 support)
* Adds --noDownload option to InstallCommand (by Manuele Menozzi)
* Fix: config:set fix --encrypt input option (by Robert Coleman)
* Updated 3rd party dependencies

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net